--- a/server/haproxy/haproxy.cfg
+++ b/server/haproxy/haproxy.cfg
@@ -8,6 +8,7 @@ defaults
     timeout connect 10s
     timeout client 30s
     timeout server 30s
+    timeout tunnel 50s
     log global
     mode http
     option httplog
