--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     environment:
       - PYTHONUNBUFFERED=1
       - USER_CONFIG_FILE=/run/secrets/config
-      - GAMEDIR=/games
+      - GAMESDIR=/games
     volumes:
       - ./backend:/app:ro
       - ./games:/games
